--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,8 @@ api-key: "<YOUR-API-KEY>"
 model: "gpt-4.1-nano"
 temperature: 0.7
 terminal: "alacritty"
+log_level: INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+log_file: /tmp/chatgpt-dmenu.log
 
 tones:
   - Friendly but professional
