Set up linters and formatters in the project with pre-commit config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,43 @@ package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+fix = true
+select = ["ALL"]
+ignore = [
+  "ANN101",  # Missing type annotation for self
+  "ANN102",  # Missing type annotation for cls
+  "D",       # pydocstyle docstring checks (optional)
+  "COM812",  # Conflicts with black
+]
+
+[tool.ruff.format]
+# Let black handle string formatting
+quote-style = "double"
+
+[tool.mypy]
+python_version = "3.11"
+warn_unused_configs = true
+disallow_untyped_defs = true
+check_untyped_defs = true
+ignore_missing_imports = true
+strict_optional = true
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
+[project.optional-dependencies]
+dev = [
+  "black",
+  "ruff",
+  "mypy",
+  "isort"
+]
